# rust-web-scraper

./: .gitignore  Cargo.toml  LICENSE  README.md  sample-env
src/: main.rs
src/lib/: mongodb.rs
src/schema/: config.rs  data.rs
src/utils/: environment.rs  logging.rs  mod.rs
