[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"
author = ["TillieStudios <github.com/TillieStudios>"]

[dependencies]
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
scraper = "0.18"
mongodb = { version = "2.7", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"